# nvim

./: .gitignore  README.md  init.lua  lazy-lock.json
lua/: keymap.lua  profile.lua  util.lua
lua/configurations/: coursier-mirror.properties  init.gradle  maven-settings.xml
lua/configurations/plugins/coc/: coc-settings.json
lua/plugins/: aerial.lua  alternate.lua  auto-save.lua  auto-session.lua  autopairs.lua  bookmarks.lua  buffer-line.lua  catppuccin.lua  cmp.lua  coc.lua  codeium.lua  colorizer.lua  commander.lua  comment.lua  expand-region.lua  file-history.lua  gitsigns.lua  highlight-words.lua  indent-blankline.lua  interesting-words.lua  leap.lua  lsp.lua  lspsaga.lua  lualine.lua  matchup.lua  new-file-template.lua  nvim-tree.lua  pretty-fold.lua  startup-time.lua  statuscol.lua  telescope.lua  todo-comments.lua  toggleterm.lua  treej.lua  treesitter-context.lua  treesitter.lua  ufo.lua  wilder.lua  yanky.lua
lua/snippets/: common.lua  jvm_snippets.lua  loader.lua  react_native.lua
lua/templates/: c.lua  cpp.lua  h.lua  hpp.lua  java.lua  lua.lua  scala.lua  tsx.lua
ncli/: ncli.py
ncli/filegen/: __init__.py  dynamic_resource.py  new_resource.py  resource.py  static_resource.py
ncli/resources/: gitignore  log4j.properties
ncli/resources/quickstart-c/: CMakeLists.txt
ncli/resources/quickstart-c/app/: CMakeLists.txt  app.c
ncli/resources/quickstart-c/cmake/: cmocka.cmake
ncli/resources/quickstart-c/include/: bar.h  foo.h
ncli/resources/quickstart-c/src/: CMakeLists.txt  bar.c  foo.c
ncli/resources/quickstart-c/test/: CMakeLists.txt  test.c  test_bar.c  test_foo.c
ncli/resources/quickstart-cpp/: CMakeLists.txt
ncli/resources/quickstart-cpp/app/: CMakeLists.txt  app.cpp
ncli/resources/quickstart-cpp/cmake/: googletest.cmake
ncli/resources/quickstart-cpp/include/: bar.hpp
ncli/resources/quickstart-cpp/src/: CMakeLists.txt  bar.cpp  foo.cpp
ncli/resources/quickstart-cpp/test/: CMakeLists.txt  test_bar.cpp  test_foo.cpp
ncli/resources/quickstart-java/: Foo.java  FooTest.java  build.gradle  gradle.properties  pom-java.xml  settings.gradle
ncli/resources/quickstart-java/gradle-wrapper/: gradle-wrapper.properties
ncli/resources/quickstart-nestjs/: package.json
ncli/resources/quickstart-nestjs/src/: app.controller.ts  app.module.ts  main.ts
ncli/resources/quickstart-python/: pyproject.toml
ncli/resources/quickstart-python/src/: app.py
ncli/resources/quickstart-python/src/bar/: __init__.py  bar.py
ncli/resources/quickstart-python/src/foo/: foo.py
ncli/resources/quickstart-python/tests/bar/: test_bar.py
ncli/resources/quickstart-python/tests/foo/: test_foo.py
ncli/resources/quickstart-rn/: .prettierrc.js  App.tsx  app.json  package.json
ncli/resources/quickstart-rn/__tests__/: App.test.tsx
ncli/resources/quickstart-rn/android/: build.gradle  gradle.properties  settings.gradle
ncli/resources/quickstart-rn/android/app/: build.gradle  debug.keystore
ncli/resources/quickstart-rn/ios/: Podfile
ncli/resources/quickstart-rn/ios/App/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ncli/resources/quickstart-rn/ios/App.xcodeproj/: project.pbxproj
ncli/resources/quickstart-rn/ios/AppTests/: AppTests.m
ncli/resources/quickstart-rn/view/components/: Cell.tsx
ncli/resources/quickstart-rn/view/pages/about/: AboutPage.tsx
ncli/resources/quickstart-rn/view/pages/home/: HomePage.tsx  PostDetail.tsx
ncli/resources/quickstart-rust/: cargo.toml  foo.rs
ncli/resources/quickstart-scala/: Bar.scala  BarSuite.scala  pom-scala.xml
ncli/waiter/: __init__.py  abstract_waiter.py  c_waiter.py  cpp_waiter.py  go_waiter.py  java_waiter.py  nestjs_waiter.py  python_waiter.py  rn_waiter.py  rust_waiter.py  scala_waiter.py
(+4 files in other folders)
