[tool.poetry]
name = "{name}"
packages = [{include = "*", from="src"}]
version = "{version}"
description = "a project named {name}"
authors = ["{author} <{email}>"]
readme = "README.md"
license = "Apache-2.0"

[tool.pyright]
include = ["src"]
extraPaths = [ "src" ]

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)7s %(filename)s:%(lineno)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

